@@ -25,4 +25,4 @@ user_guide_src/cilexer/pycilexer.egg-info/*
 *.stTheme.cache
 *.sublime-workspace
 *.sublime-project
-/application/config/development/*
+/application/config/Development/*
