@@ -35,6 +35,11 @@
     text-align: center;
 }
 
+.table-right-game{
+    width: 100%;
+    text-align: center;
+}
+
 img {
     max-width: 100%;
     height: auto;
